# ramses_esp

./: .gitignore  CMakeLists.txt  README.md  esp32_text_sensor_quirk.py  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-c6-devkitm-1  sdkconfig.old
components/frame/: frame.c
components/gateway/: CMakeLists.txt  gateway.c
components/message/: message.c
components/ramses-buttons/: Kconfig.projbuild
components/ramses-buttons/include/: ramses_buttons.h
components/ramses-mqtt/: CMakeLists.txt  ramses-mqtt.c
components/ramses-network/: CMakeLists.txt  network_cmd.c  ramses_network.c  ramses_sntp.c  zigbee.c  zigbee_cmd.c  zigbee_cmd.h
components/ramses-network/include/: ramses_network.h  zigbee.h
main/: CMakeLists.txt  idf_component.yml  main.c
src/: CMakeLists.txt
z2m/external_extensions/: ramses-esp-bridge.mjs
